--- a/exercícios/ex026/mq002/estilos/style.css
+++ b/exercícios/ex026/mq002/estilos/style.css
@@ -1,1 +1,14 @@
 @charset "UTF-8";
+
+body {
+    margin: 0px;
+    padding: 0px;
+    background-color: #233eff;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    padding: 10px;
+}
